# backend

./: Cargo.toml  docker-compose.yml
domain/: Cargo.toml
domain/src/post/: mod.rs  post.rs
domain/src/post/errors/: mod.rs  post_too_long.rs  post_too_short.rs
errors/src/: domain_error.rs  lib.rs
framework/: Cargo.toml
framework/src/: main.rs
framework/src/axum/: mod.rs
framework/src/mongodb/: mod.rs  post_repository.rs
usecases/: Cargo.toml
usecases/src/: create_post.rs  lib.rs  usecase.rs
usecases/src/errors/: failed_get.rs  failed_insert.rs  mod.rs  not_found.rs  technical_error.rs
usecases/src/repositories/: post_repository.rs
