[package]
name = "framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
usecases = { path = "../usecases" }
domain = { path = "../domain" }
async-trait = "0.1.77"

[dependencies.mongodb]
version = "2.8.0"
features = ["tokio-runtime"]
